@@ -3,12 +3,13 @@ import com.typesafe.sbt.pgp.PgpKeys._
 
 val Organization = "io.github.gitbucket"
 val Name = "gitbucket"
-val GitBucketVersion = "4.25.0"
-val ScalatraVersion = "2.6.1"
-val JettyVersion = "9.4.7.v20170914"
+val GitBucketVersion = "4.30.0-SNAPSHOT"
+val ScalatraVersion = "2.6.3"
+val JettyVersion = "9.4.14.v20181114"
+val JgitVersion = "5.1.3.201810200350-r"
 
 lazy val root = (project in file("."))
-  .enablePlugins(SbtTwirl, ScalatraPlugin, JRebelPlugin)
+  .enablePlugins(SbtTwirl, ScalatraPlugin)
   .settings(
     )
 
@@ -16,7 +17,7 @@ sourcesInBase := false
 organization := Organization
 name := Name
 version := GitBucketVersion
-scalaVersion := "2.12.6"
+scalaVersion := "2.12.7"
 
 scalafmtOnCompile := true
 
@@ -30,45 +31,46 @@ resolvers ++= Seq(
 )
 
 libraryDependencies ++= Seq(
-  "org.eclipse.jgit"                % "org.eclipse.jgit.http.server" % "5.0.0.201805301535-rc2",
-  "org.eclipse.jgit"                % "org.eclipse.jgit.archive"     % "5.0.0.201805301535-rc2",
+  "org.eclipse.jgit"                % "org.eclipse.jgit.http.server" % JgitVersion,
+  "org.eclipse.jgit"                % "org.eclipse.jgit.archive"     % JgitVersion,
   "org.scalatra"                    %% "scalatra"                    % ScalatraVersion,
   "org.scalatra"                    %% "scalatra-json"               % ScalatraVersion,
   "org.scalatra"                    %% "scalatra-forms"              % ScalatraVersion,
-  "org.json4s"                      %% "json4s-jackson"              % "3.5.3",
+  "org.json4s"                      %% "json4s-jackson"              % "3.6.2",
   "commons-io"                      % "commons-io"                   % "2.6",
-  "io.github.gitbucket"             % "solidbase"                    % "1.0.2",
+  "io.github.gitbucket"             % "solidbase"                    % "1.0.3",
   "io.github.gitbucket"             % "markedj"                      % "1.0.15",
-  "org.apache.commons"              % "commons-compress"             % "1.15",
+  "org.apache.commons"              % "commons-compress"             % "1.18",
   "org.apache.commons"              % "commons-email"                % "1.5",
-  "org.apache.httpcomponents"       % "httpclient"                   % "4.5.4",
-  "org.apache.sshd"                 % "apache-sshd"                  % "1.6.0" exclude ("org.slf4j", "slf4j-jdk14"),
-  "org.apache.tika"                 % "tika-core"                    % "1.17",
-  "com.github.takezoe"              %% "blocking-slick-32"           % "0.0.10",
+  "org.apache.httpcomponents"       % "httpclient"                   % "4.5.6",
+  "org.apache.sshd"                 % "apache-sshd"                  % "2.1.0" exclude ("org.slf4j", "slf4j-jdk14") exclude ("org.apache.sshd", "sshd-mina") exclude ("org.apache.sshd", "sshd-netty"),
+  "org.apache.tika"                 % "tika-core"                    % "1.19.1",
+  "com.github.takezoe"              %% "blocking-slick-32"           % "0.0.11",
   "com.novell.ldap"                 % "jldap"                        % "2009-10-07",
-  "com.h2database"                  % "h2"                           % "1.4.196",
-  "org.mariadb.jdbc"                % "mariadb-java-client"          % "2.2.5",
-  "org.postgresql"                  % "postgresql"                   % "42.1.4",
+  "com.h2database"                  % "h2"                           % "1.4.197",
+  "org.mariadb.jdbc"                % "mariadb-java-client"          % "2.3.0",
+  "org.postgresql"                  % "postgresql"                   % "42.2.5",
   "ch.qos.logback"                  % "logback-classic"              % "1.2.3",
-  "com.zaxxer"                      % "HikariCP"                     % "2.7.4",
-  "com.typesafe"                    % "config"                       % "1.3.2",
-  "com.typesafe.akka"               %% "akka-actor"                  % "2.5.8",
+  "com.zaxxer"                      % "HikariCP"                     % "3.2.0",
+  "com.typesafe"                    % "config"                       % "1.3.3",
+  "com.typesafe.akka"               %% "akka-actor"                  % "2.5.18",
   "fr.brouillard.oss.security.xhub" % "xhub4j-core"                  % "1.0.0",
   "com.github.bkromhout"            % "java-diff-utils"              % "2.1.1",
-  "org.cache2k"                     % "cache2k-all"                  % "1.0.1.Final",
-  "com.enragedginger"               %% "akka-quartz-scheduler"       % "1.6.1-akka-2.5.x" exclude ("c3p0", "c3p0"),
+  "org.cache2k"                     % "cache2k-all"                  % "1.2.0.Final",
+  "com.enragedginger"               %% "akka-quartz-scheduler"       % "1.7.0-akka-2.5.x" exclude ("c3p0", "c3p0") exclude ("com.zaxxer", "HikariCP-java6"),
   "net.coobird"                     % "thumbnailator"                % "0.4.8",
   "com.github.zafarkhaja"           % "java-semver"                  % "0.9.0",
-  "com.nimbusds"                    % "oauth2-oidc-sdk"              % "5.45",
+  "com.nimbusds"                    % "oauth2-oidc-sdk"              % "5.64.4",
   "org.eclipse.jetty"               % "jetty-webapp"                 % JettyVersion % "provided",
   "javax.servlet"                   % "javax.servlet-api"            % "3.1.0" % "provided",
   "junit"                           % "junit"                        % "4.12" % "test",
   "org.scalatra"                    %% "scalatra-scalatest"          % ScalatraVersion % "test",
-  "org.mockito"                     % "mockito-core"                 % "2.13.0" % "test",
-  "com.wix"                         % "wix-embedded-mysql"           % "3.0.0" % "test",
-  "ru.yandex.qatools.embed"         % "postgresql-embedded"          % "2.6" % "test",
-  "net.i2p.crypto"                  % "eddsa"                        % "0.2.0",
-  "is.tagomor.woothee"              % "woothee-java"                 % "1.7.0"
+  "org.mockito"                     % "mockito-core"                 % "2.23.4" % "test",
+  "com.wix"                         % "wix-embedded-mysql"           % "4.2.0" % "test",
+  "ru.yandex.qatools.embed"         % "postgresql-embedded"          % "2.10" % "test",
+  "net.i2p.crypto"                  % "eddsa"                        % "0.3.0",
+  "is.tagomor.woothee"              % "woothee-java"                 % "1.8.0",
+  "org.ec4j.core"                   % "ec4j-core"                    % "0.0.3"
 )
 
 // Compiler settings
@@ -94,21 +96,6 @@ assemblyMergeStrategy in assembly := {
       case _                      => MergeStrategy.discard
     }
   case x => MergeStrategy.first
-}
-
-// JRebel
-//Seq(jrebelSettings: _*)
-
-//jrebel.webLinks += (target in webappPrepare).value
-//jrebel.enabled := System.getenv().get("JREBEL") != null
-javaOptions in Jetty ++= Option(System.getenv().get("JREBEL")).toSeq.flatMap { path =>
-  if (path.endsWith(".jar")) {
-    // Legacy JRebel agent
-    Seq("-noverify", "-XX:+UseConcMarkSweepGC", "-XX:+CMSClassUnloadingEnabled", s"-javaagent:${path}")
-  } else {
-    // New JRebel agent
-    Seq(s"-agentpath:${path}")
-  }
 }
 
 // Exclude a war file from published artifacts
@@ -170,12 +157,17 @@ executableKey := {
   // include plugins
   val pluginsDir = temp / "WEB-INF" / "classes" / "plugins"
   IO createDirectory (pluginsDir)
-  IO copyFile (Keys.baseDirectory.value / "plugins.json", pluginsDir / "plugins.json")
 
-  val json = IO read (Keys.baseDirectory.value / "plugins.json")
-  PluginsJson.getUrls(json).foreach { url =>
-    log info s"Download: ${url}"
-    IO transfer (new java.net.URL(url).openStream, pluginsDir / url.substring(url.lastIndexOf("/") + 1))
+  val plugins = IO readLines (Keys.baseDirectory.value / "src" / "main" / "resources" / "bundle-plugins.txt")
+  plugins.foreach { plugin =>
+    plugin.trim.split(":") match {
+      case Array(pluginId, pluginVersion) =>
+        val url = "https://plugins.gitbucket-community.org/releases/" +
+          s"gitbucket-${pluginId}-plugin/gitbucket-${pluginId}-plugin-gitbucket_${version.value}-${pluginVersion}.jar"
+        log info s"Download: ${url}"
+        IO transfer (new java.net.URL(url).openStream, pluginsDir / url.substring(url.lastIndexOf("/") + 1))
+      case _ => ()
+    }
   }
 
   // zip it up
